--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,5 +9,9 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
+  
+    "paths":{
+      "@Types/*":["./src/Types/*"]
+    }
   }
 }
