--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.11.0",
-    "hono": "^4.2.5"
+    "hono": "^4.2.5",
+    "htmx.org": "^1.9.12"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
