--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@hono/node-server": "^1.11.0",
     "hono": "^4.2.5",
-    "htmx.org": "^1.9.12"
+    "htmx.org": "^1.9.12",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
